--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,12 @@ body {
   flex-direction: column;
 }
 
+.heading {
+  text-align: center;
+  margin-bottom: 12px;
+  text-transform: uppercase;
+}
+
 .add-item-container {
   display: flex;
   width: 100%;
